--- a/wp-content/themes/affstream/styles/home-page-blog.scss
+++ b/wp-content/themes/affstream/styles/home-page-blog.scss
@@ -8,9 +8,7 @@
   background: #FFFFFF;
   font-family: "SF Pro Display", sans-serif;
   overflow: hidden;
-  max-width: 98%;
   margin: 0 auto;
-  border-radius: 20px;
   @include breakpoint(desktop){
     border-radius: 0;
     margin: auto;
@@ -18,16 +16,22 @@
   }
   .home-blog-title{
     color: #100F0F;
+    font-family: "SF Pro Display";
     font-size: 60px;
-    font-style: italic;
-    font-weight: 900;
+    font-style: normal;
+    font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
-    text-align: center;
     margin-bottom: 50px;
+    max-width: 1600px;
+    margin: 0 auto 20px;
     @include breakpoint(mobile){
       font-size: 53px;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
+      font-size: 36px;
+      padding: 0 16px;
+      text-align: center;
+
     }
   }
   .container{
