--- a/wp-content/themes/affstream/styles/main.css
+++ b/wp-content/themes/affstream/styles/main.css
@@ -1057,9 +1057,7 @@ header .button-signin:hover {
   background: #FFFFFF;
   font-family: "SF Pro Display", sans-serif;
   overflow: hidden;
-  max-width: 98%;
   margin: 0 auto;
-  border-radius: 20px;
 }
 @media (max-width: 1599px) {
   .blog {
@@ -1070,18 +1068,23 @@ header .button-signin:hover {
 }
 .blog .home-blog-title {
   color: #100F0F;
+  font-family: "SF Pro Display";
   font-size: 60px;
-  font-style: italic;
-  font-weight: 900;
+  font-style: normal;
+  font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
-  text-align: center;
   margin-bottom: 50px;
+  max-width: 1600px;
+  margin: 0 auto 20px;
 }
 @media (max-width: 767px) {
   .blog .home-blog-title {
     font-size: 53px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+    font-size: 36px;
+    padding: 0 16px;
+    text-align: center;
   }
 }
 .blog .container {
@@ -4981,592 +4984,6 @@ img, video {
   margin: 0 auto;
 }
 
-.top-brands {
-  margin-top: 200px;
-  margin-bottom: 200px;
-  box-sizing: border-box;
-  padding: 0 40px;
-  height: fit-content;
-}
-@media (max-width: 1919px) {
-  .top-brands {
-    margin-bottom: 200px;
-  }
-}
-@media (max-width: 1599px) {
-  .top-brands {
-    margin-top: 160px;
-    margin-bottom: 160px;
-  }
-}
-@media (max-width: 767px) {
-  .top-brands {
-    margin-bottom: 140px;
-    padding: 0 24px;
-    margin-top: 0;
-  }
-}
-.top-brands .container {
-  max-width: 1770px;
-  width: 100%;
-  background: #100F0F;
-  border-radius: 100px;
-  padding: 70px 0;
-  position: relative;
-  border: 2px #00E291 solid;
-  box-shadow: 0px 4px 60px 0px #00E291;
-  box-sizing: border-box;
-}
-@media (max-width: 1599px) {
-  .top-brands .container {
-    padding: 35px 0;
-    max-width: 1400px;
-  }
-}
-@media (max-width: 1023px) {
-  .top-brands .container {
-    border-radius: 60px;
-    max-width: 100%;
-  }
-}
-@media (max-width: 767px) {
-  .top-brands .container {
-    border-radius: 18px;
-    box-shadow: none;
-    border: none;
-    padding: 0;
-  }
-}
-.top-brands .container .swiper-top-brands {
-  margin: auto;
-  padding-bottom: 50px;
-  position: relative;
-  max-width: 1370px;
-}
-@media (max-width: 1599px) {
-  .top-brands .container .swiper-top-brands {
-    max-width: 80%;
-  }
-}
-.top-brands .container .swiper-top-brands h2 {
-  font-size: 70px;
-  font-style: italic;
-  font-weight: 900;
-  line-height: 84px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #EDEDFF;
-  margin-top: 0;
-  margin-bottom: 100px;
-}
-@media (max-width: 767px) {
-  .top-brands .container .swiper-top-brands h2 {
-    font-size: 38.5608px;
-    line-height: 46px;
-  }
-}
-.top-brands .container .swiper-top-brands .top-brand-title {
-  margin: 0 auto 100px;
-  width: 100%;
-}
-@media (max-width: 1599px) {
-  .top-brands .container .swiper-top-brands .top-brand-title {
-    display: flex;
-    justify-content: center;
-    max-width: 389px;
-    margin: 0 auto 40px;
-  }
-}
-@media (max-width: 1023px) {
-  .top-brands .container .swiper-top-brands .top-brand-title {
-    margin-bottom: 40px;
-  }
-}
-@media (max-width: 767px) {
-  .top-brands .container .swiper-top-brands .top-brand-title {
-    margin: 0 auto 57px;
-    max-width: 100%;
-  }
-}
-.top-brands .container .swiper-top-brands .top-brand-card {
-  background: #100F0F;
-  border: 4.5px solid #EDEDFF;
-  box-shadow: none;
-  border-radius: 22.5px;
-  max-width: 320px;
-  margin: 0 auto;
-  position: relative;
-}
-@media (max-width: 1599px) {
-  .top-brands .container .swiper-top-brands .top-brand-card {
-    max-width: 250px;
-  }
-}
-.top-brands .container .swiper-top-brands .top-brand-card .icon-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 150px;
-  padding: 10px;
-}
-@media (max-width: 1599px) {
-  .top-brands .container .swiper-top-brands .top-brand-card .icon-container {
-    margin: 0;
-  }
-}
-@media (max-width: 767px) {
-  .top-brands .container .swiper-top-brands .top-brand-card .icon-container {
-    min-height: 110px;
-  }
-}
-.top-brands .container .swiper-top-brands .top-brand-card .icon-container img {
-  margin: auto;
-  width: auto;
-  height: auto;
-}
-.top-brands .container .swiper-top-brands .top-brand-card .exclusive {
-  position: absolute;
-  top: 22px;
-  right: 22px;
-}
-@media (max-width: 1599px) {
-  .top-brands .container .swiper-top-brands .top-brand-card .exclusive {
-    top: 15px;
-    right: 15px;
-    max-width: 56px;
-  }
-}
-@media (max-width: 1023px) {
-  .top-brands .container .swiper-top-brands .top-brand-card .exclusive {
-    top: 17px;
-    right: 17px;
-  }
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info {
-  padding: 20px;
-  background: #EDEDFF;
-  border-radius: 16px;
-  color: #100F0F;
-  position: relative;
-  z-index: 20;
-}
-@media (max-width: 1599px) {
-  .top-brands .container .swiper-top-brands .top-brand-card .brand-info {
-    padding: 14px;
-  }
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info:after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: -2px;
-  right: -2px;
-  bottom: -2px;
-  margin: auto;
-  background: #EDEDFF;
-  z-index: 1;
-  border-radius: 16px;
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info .name-container {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-  color: #100F0F;
-  margin-bottom: 22px;
-  z-index: 30;
-  position: relative;
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info .name-container .flags-list {
-  display: flex;
-  align-items: end;
-  gap: 3px;
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info .name-container .flags-list li {
-  margin-bottom: 0;
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info .name-container .flags-list .count-country {
-  color: #100F0F;
-  text-align: center;
-  font-size: 10.5px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 110%;
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info .name-container img {
-  max-width: 43px;
-}
-@media (max-width: 1599px) {
-  .top-brands .container .swiper-top-brands .top-brand-card .brand-info .name-container img {
-    max-width: 25px;
-  }
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info .name-container h3 {
-  color: inherit;
-  margin: 0;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 27px;
-  line-height: 110%;
-}
-@media (max-width: 1599px) {
-  .top-brands .container .swiper-top-brands .top-brand-card .brand-info .name-container h3 {
-    font-size: 20px;
-  }
-}
-@media (max-width: 1023px) {
-  .top-brands .container .swiper-top-brands .top-brand-card .brand-info .name-container h3 {
-    font-size: 20px;
-  }
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info .flex-container {
-  display: flex;
-  justify-content: space-between;
-  z-index: 30;
-  position: relative;
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info .flex-container span {
-  border-right: 1px #0c0c0c solid;
-  padding-right: 12px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 110%;
-}
-@media (max-width: 1599px) {
-  .top-brands .container .swiper-top-brands .top-brand-card .brand-info .flex-container span {
-    font-size: 18px;
-    line-height: normal;
-    padding-right: 7px;
-  }
-}
-.top-brands .container .swiper-top-brands .top-brand-card .brand-info .flex-container span:last-child {
-  border-right: none;
-  padding-right: 0;
-}
-.top-brands .inner-container {
-  max-width: 80%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  margin-top: 60px;
-  align-items: center;
-}
-@media (max-width: 1599px) {
-  .top-brands .inner-container {
-    margin-top: 15px;
-  }
-}
-@media (max-width: 767px) {
-  .top-brands .inner-container {
-    flex-direction: column;
-    margin-top: 60px;
-    width: 100%;
-    max-width: 100%;
-  }
-}
-.top-brands .inner-container p {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 34.2849px;
-  line-height: 41px;
-  margin-right: 80px;
-  color: #EDEDFF;
-  margin-bottom: 0;
-}
-@media (max-width: 1599px) {
-  .top-brands .inner-container p {
-    font-size: 27px;
-  }
-}
-@media (min-width: 1024px) and (max-width: 1300px) {
-  .top-brands .inner-container p {
-    font-size: 26px;
-  }
-}
-@media (max-width: 1023px) {
-  .top-brands .inner-container p {
-    font-size: 22px;
-  }
-}
-@media (max-width: 767px) {
-  .top-brands .inner-container p {
-    text-align: center;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20.1985px;
-    line-height: 24px;
-    margin-right: 0;
-    max-width: 280px;
-    margin-bottom: 22px;
-    margin-top: 0;
-  }
-}
-.top-brands .navigation {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  bottom: 47%;
-  left: 0;
-  right: 0;
-  margin: auto;
-  max-width: 1520px;
-}
-@media (max-width: 1599px) {
-  .top-brands .navigation {
-    max-width: 93%;
-    width: 100%;
-    margin: 0 auto;
-  }
-}
-@media (max-width: 1023px) {
-  .top-brands .navigation {
-    display: none;
-  }
-}
-.top-brands .navigation .arrow-prev, .top-brands .navigation .arrow-next {
-  max-width: 50px;
-  height: 50px;
-  cursor: pointer;
-}
-.top-brands .navigation .arrow-prev svg, .top-brands .navigation .arrow-next svg {
-  max-width: 40px;
-}
-.top-brands .swiper-pagination {
-  bottom: 0 !important;
-}
-.top-brands .swiper-pagination .swiper-pagination-bullet {
-  background: #00E291;
-}
-
-.home-contacts {
-  margin-bottom: 180px;
-  position: relative;
-  overflow: hidden;
-  padding-top: 70px;
-}
-@media (max-width: 1599px) {
-  .home-contacts {
-    padding: 50px 10px 0;
-    box-sizing: border-box;
-    margin-bottom: 140px;
-  }
-}
-@media (max-width: 1023px) {
-  .home-contacts {
-    margin-bottom: 100px;
-  }
-}
-@media (max-width: 767px) {
-  .home-contacts {
-    margin-bottom: 70px;
-  }
-}
-.home-contacts h2 {
-  margin: 0 auto 70px;
-  max-width: 100%;
-  width: 100%;
-  text-align: center;
-}
-@media (max-width: 767px) {
-  .home-contacts h2 {
-    margin: 0 auto 25px;
-  }
-}
-.home-contacts .container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-gap: 45px;
-  position: relative;
-}
-@media (max-width: 1599px) {
-  .home-contacts .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    grid-column-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  }
-}
-@media (max-width: 767px) {
-  .home-contacts .container {
-    gap: 40px;
-  }
-}
-.home-contacts .container .contact-card {
-  border-radius: 70px;
-  display: flex;
-  flex-direction: column;
-  max-width: 370px;
-  width: 100%;
-  background: var(--custom-gradient);
-  position: relative;
-  color: #EDEDFF;
-  box-sizing: border-box;
-  padding: 40px;
-  margin: auto;
-  height: 100%;
-}
-@media (max-width: 1599px) {
-  .home-contacts .container .contact-card {
-    padding: 15px;
-    border-radius: 50px;
-  }
-}
-@media (max-width: 767px) {
-  .home-contacts .container .contact-card {
-    padding: 35px;
-    max-width: 305px;
-    border-radius: 60px;
-  }
-}
-.home-contacts .container .contact-card:nth-child(2n) {
-  background: var(--secondary-gradient);
-}
-.home-contacts .container .contact-card img {
-  width: auto;
-  margin: 20px auto 20px;
-  border-radius: 150%;
-  z-index: 2;
-}
-.home-contacts .container .contact-card::after {
-  position: absolute;
-  top: 4px;
-  bottom: 4px;
-  left: 4px;
-  right: 4px;
-  background: #0c0c0c;
-  content: "";
-  z-index: 1;
-  border-radius: 70px;
-  margin: auto;
-  width: calc(100% - 8px);
-  height: calc(100% - 8px);
-}
-@media (max-width: 1599px) {
-  .home-contacts .container .contact-card::after {
-    border-radius: 50px;
-    top: 2px;
-    bottom: 2px;
-    left: 2px;
-    right: 2px;
-    width: calc(100% - 4px);
-    height: calc(100% - 4px);
-  }
-}
-@media (max-width: 767px) {
-  .home-contacts .container .contact-card::after {
-    border-radius: 60px;
-  }
-}
-.home-contacts .container .contact-card h4 {
-  color: #EDEDFF;
-  text-align: center;
-  font-size: 22px;
-  font-weight: 500;
-  z-index: 2;
-  margin-bottom: 20px;
-  margin-top: 0;
-}
-@media (max-width: 1599px) {
-  .home-contacts .container .contact-card h4 {
-    font-size: 17px;
-    margin-bottom: 15px;
-  }
-}
-.home-contacts .container .contact-card .position {
-  color: #EDEDFF;
-  text-align: center;
-  font-size: 30px;
-  font-weight: 700;
-  text-transform: uppercase;
-  z-index: 2;
-  margin-bottom: 20px;
-}
-@media (max-width: 1599px) {
-  .home-contacts .container .contact-card .position {
-    font-size: 24px;
-    line-height: normal;
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-}
-.home-contacts .container .contact-card .email {
-  color: #EDEDFF;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 500;
-  text-decoration-line: underline;
-  z-index: 2;
-  margin-bottom: 20px;
-}
-@media (max-width: 1599px) {
-  .home-contacts .container .contact-card .email {
-    font-size: 18px;
-  }
-}
-.home-contacts .container .contact-card .social-links .social-media-list {
-  display: flex;
-  justify-content: center;
-}
-.home-contacts .container .contact-card .social-links .social-media-list .social-media-item {
-  position: relative;
-  z-index: 2;
-  margin-right: 10px;
-}
-.home-contacts .container .contact-card .social-links .social-media-list .social-media-item a {
-  width: 42px;
-  height: 42px;
-  border: 2px #00E291 solid;
-  border-radius: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-@media (max-width: 1599px) {
-  .home-contacts .container .contact-card .social-links .social-media-list .social-media-item a {
-    width: 30px;
-    height: 30px;
-  }
-}
-@media (max-width: 767px) {
-  .home-contacts .container .contact-card .social-links .social-media-list .social-media-item a {
-    width: 37px;
-    height: 37px;
-  }
-}
-.home-contacts .container .contact-card .social-links .social-media-list .social-media-item a:hover {
-  background: #00E291;
-}
-.home-contacts .container .contact-card .social-links .social-media-list .social-media-item a:hover .telegram-icon path {
-  stroke: #0c0c0c !important;
-}
-.home-contacts .container .contact-card .social-links .social-media-list .social-media-item a:hover .linkedin-icon path {
-  fill: #0c0c0c !important;
-}
-.home-contacts .container .contact-card .social-links .social-media-list .social-media-item a:hover svg path {
-  fill: #0c0c0c;
-}
-.home-contacts .container .contact-card .social-links .social-media-list .social-media-item a svg {
-  width: 22px;
-  height: 22px;
-}
-@media (max-width: 1599px) {
-  .home-contacts .container .contact-card .social-links .social-media-list .social-media-item a svg {
-    width: 15px;
-    height: 15px;
-  }
-}
-@media (max-width: 767px) {
-  .home-contacts .container .contact-card .social-links .social-media-list .social-media-item a svg {
-    width: 22px;
-    height: auto;
-  }
-}
-.home-contacts .container .contact-card .social-links .social-media-list .social-media-item a svg path {
-  fill: #00E291;
-}
-
 .top-mobile-image, .bottom-mobile-image {
   position: absolute;
   left: 50%;
@@ -5974,135 +5391,6 @@ img, video {
   }
 }
 .coming-soon .container .link-container .go-home:hover {
-  background: #0C62FD;
-}
-
-.about-us {
-  padding: 0 16px;
-  margin-bottom: 40px;
-}
-@media (max-width: 767px) {
-  .about-us {
-    margin-bottom: 0;
-    padding: 70px 16px 0;
-  }
-}
-.about-us h2 {
-  color: #0C62FD;
-  font-family: "SF Pro Display", sans-serif;
-  font-size: 60px;
-  font-style: italic;
-  font-weight: 900;
-  line-height: normal;
-  text-transform: uppercase;
-  text-align: center;
-}
-@media (max-width: 767px) {
-  .about-us h2 {
-    font-size: 33px;
-  }
-}
-.about-us .container {
-  max-width: 1500px;
-  margin: 0 auto 20px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-@media (max-width: 1599px) {
-  .about-us .container {
-    max-width: 1200px;
-  }
-}
-@media (max-width: 767px) {
-  .about-us .container {
-    margin-bottom: 0;
-  }
-}
-.about-us .container .swiper-about-us {
-  margin-bottom: 20px;
-  max-width: 90%;
-}
-@media (max-width: 767px) {
-  .about-us .container .swiper-about-us {
-    max-width: 100%;
-  }
-}
-.about-us .container .about-card {
-  background: #FFFFFF;
-  border-radius: 30px;
-  color: #0c0c0c;
-  padding: 20px;
-}
-@media (max-width: 767px) {
-  .about-us .container .about-card {
-    height: auto;
-  }
-}
-.about-us .container .about-card .flex-container {
-  display: flex;
-  gap: 15px;
-  margin-bottom: 25px;
-}
-.about-us .container .about-card .flex-container .user {
-  display: flex;
-  gap: 15px;
-  align-items: center;
-  font-family: "SF Pro Display", sans-serif;
-}
-.about-us .container .about-card .flex-container .user img {
-  max-width: 60px;
-  height: auto;
-  width: 100%;
-}
-.about-us .container .about-card .flex-container .user .user-info {
-  display: flex;
-  flex-direction: column;
-}
-.about-us .container .about-card .flex-container .user .name {
-  color: #100F0F;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-.about-us .container .about-card .flex-container .user .position {
-  color: #100F0F;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-.about-us .container .about-card .flex-container .service {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.about-us .container .about-card .comment-text {
-  margin-bottom: 0;
-  color: #100F0F;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 120%;
-}
-.about-us .container .swiper-about-button-next, .about-us .container .swiper-about-button-prev {
-  position: relative;
-  cursor: pointer;
-}
-@media (max-width: 767px) {
-  .about-us .container .swiper-about-button-next, .about-us .container .swiper-about-button-prev {
-    display: none;
-  }
-}
-.about-us .swiper-pagination {
-  position: relative;
-}
-.about-us .swiper-pagination .swiper-pagination-bullet {
-  background: #FFFFFF;
-}
-.about-us .swiper-pagination .swiper-pagination-bullet-active {
   background: #0C62FD;
 }
 
